not working yet

--- a/01.01-Starting-Simple.ipynb
+++ b/01.01-Starting-Simple.ipynb
@@ -220,62 +220,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 111,
    "id": "c6b30f15-73e1-47a3-a4d5-37ee9b0a0e16",
    "metadata": {},
    "outputs": [],
    "source": [
     "# what would our simple query look like?\n",
     "# let's say something that get's us movies with a specific Id?\n",
-    "a_simple_query = {\n",
-    "    \"table\": \"movies\",\n",
-    "    \"columns\": [\"movieId\", \"title\", \"genres\"],\n",
-    "    \"where\": \"int(row['movieId']) == 12\"\n",
-    "}"
+    "table_metadata = {\n",
+    "\t'name': 'movies',\n",
+    "\t'columns': ['movieId', 'title', 'genres']\n",
+    "}\n",
+    "\n",
+    "where_clause = 'int(movieId) == 12'\n",
+    "\n",
+    "a_simple_query = where_clause"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 112,
+   "id": "dd5827cb-d298-410e-b68c-c78e0d2c7181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_expr = \"int(movieId) == 12\"\n",
+    "sample_row =  {'movieId': '12',\n",
+    "  'title': 'Dracula: Dead and Loving It (1995)',\n",
+    "  'genres': 'Comedy|Horror'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "9f81ca85-717b-4a35-8894-cac73dd6dde0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(eval_expr,sample_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "6dea16e1-244f-4a8d-b1dd-0b4c64420bb7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Execute a SELECT query given a dictionary with data in it\n",
     "def execute_select(query, table_data):\n",
-    "    columns = query[\"columns\"]\n",
-    "    table_name = query[\"table\"]\n",
-    "    where_clause = query.get(\"where\")\n",
-    "\n",
-    "    selected_rows = []\n",
-    "    # for row in table_data[table_name]:\n",
-    "    for row in table_data:\n",
-    "        if where_clause:\n",
-    "            # Apply WHERE clause filtering\n",
-    "            if eval(where_clause, row):\n",
-    "                selected_rows.append({col: row[col] for col in columns})\n",
-    "        else:\n",
-    "            selected_rows.append({col: row[col] for col in columns})\n",
-    "\n",
-    "    return selected_rows"
+    "\tcolumns = query[\"columns\"]\n",
+    "\ttable_name = query[\"table\"]\n",
+    "\twhere_clause = query[\"where\"]\n",
+    "\tselected_rows = []\n",
+    "\t# for row in table_data[table_name]:\n",
+    "\tfor row in table_data:\n",
+    "\t\tif where_clause:\n",
+    "\t\t\t# Apply WHERE clause filtering\n",
+    "\t\t\tprint(where_clause)\n",
+    "\t\t\tif eval(eval(where_clause), row):\n",
+    "\t\t\t\tselected_rows.append({col: row[col] for col in columns})\n",
+    "\t\telse:\n",
+    "\t\t\tselected_rows.append({col: row[col] for col in columns})\n",
+    "\treturn selected_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "id": "5c90ad76-3592-4ed7-8c9f-fc67b94648d2",
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "globals must be a real dict; try eval(expr, {}, mapping)",
+     "evalue": "string indices must be integers, not 'str'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mexecute_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_simple_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmovies_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "Cell \u001b[1;32mIn[42], line 12\u001b[0m, in \u001b[0;36mexecute_select\u001b[1;34m(query, table_data)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m table_data:\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m where_clause:\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;66;03m# Apply WHERE clause filtering\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwhere_clause\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     13\u001b[0m             selected_rows\u001b[38;5;241m.\u001b[39mappend({col: row[col] \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m columns})\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mTypeError\u001b[0m: globals must be a real dict; try eval(expr, {}, mapping)"
+      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mexecute_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_simple_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmovies_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "Cell \u001b[1;32mIn[114], line 3\u001b[0m, in \u001b[0;36mexecute_select\u001b[1;34m(query, table_data)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecute_select\u001b[39m(query, table_data):\n\u001b[1;32m----> 3\u001b[0m \tcolumns \u001b[38;5;241m=\u001b[39m \u001b[43mquery\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      4\u001b[0m \ttable_name \u001b[38;5;241m=\u001b[39m query[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtable\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      5\u001b[0m \twhere_clause \u001b[38;5;241m=\u001b[39m query[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhere\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
      ]
     }
    ],
