First steps complete

--- a/01.01-Starting-Simple.ipynb
+++ b/01.01-Starting-Simple.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 137,
    "id": "e9bc4ebe-94ab-4996-93cf-d1d700091b49",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 138,
    "id": "2895a682-ea31-4567-b681-b914e6dc4479",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 139,
    "id": "df435f24-4999-4dde-89de-65330591cfa1",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "  'genres': 'Comedy|Horror'}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,8 +219,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fafae862-f477-4413-a7b3-18153da51316",
+   "metadata": {},
+   "source": [
+    "For the WHERE clause, we need a way to evaluate an expression.   \n",
+    "[Python's built-in eval()](https://docs.python.org/3/library/functions.html#eval) can be used provided the expression is valid python syntax.  \n",
+    "Let's test this idea first.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 141,
+   "id": "dd5827cb-d298-410e-b68c-c78e0d2c7181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_expr = \"int(movieId) == 12\"\n",
+    "sample_row =  {'movieId': '12',\n",
+    "  'title': 'Dracula: Dead and Loving It (1995)',\n",
+    "  'genres': 'Comedy|Horror'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "9f81ca85-717b-4a35-8894-cac73dd6dde0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(eval_expr,sample_row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e87b0989-597e-4fe1-a0e5-b6190ce27f1d",
+   "metadata": {},
+   "source": [
+    "**A note of caution:**   \n",
+    "eval() and exec() built-in methods in Python are considered problematic from a Security standpoint as they let one run arbitrary code.\n",
+    "We'll see later how to implement a safer version.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "id": "c6b30f15-73e1-47a3-a4d5-37ee9b0a0e16",
    "metadata": {},
    "outputs": [],
@@ -239,57 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "dd5827cb-d298-410e-b68c-c78e0d2c7181",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval_expr = \"int(movieId) == 12\"\n",
-    "sample_row =  {'movieId': '12',\n",
-    "  'title': 'Dracula: Dead and Loving It (1995)',\n",
-    "  'genres': 'Comedy|Horror'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "9f81ca85-717b-4a35-8894-cac73dd6dde0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval(eval_expr,sample_row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 148,
    "id": "6dea16e1-244f-4a8d-b1dd-0b4c64420bb7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Execute a SELECT query given a dictionary with data in it\n",
     "def execute_select(query, table_data):\n",
-    "\tcolumns = query[\"columns\"]\n",
-    "\ttable_name = query[\"table\"]\n",
-    "\twhere_clause = query[\"where\"]\n",
+    "\tcolumns = table_metadata['columns']\n",
+    "\ttable_name = table_metadata['name']\n",
+    "\twhere_clause = query\n",
     "\tselected_rows = []\n",
-    "\t# for row in table_data[table_name]:\n",
-    "\tfor row in table_data:\n",
+    "\t# SELECT * FROM\n",
+    "\tdata = table_data[table_name]\n",
+    "\tfor row in data:\n",
     "\t\tif where_clause:\n",
     "\t\t\t# Apply WHERE clause filtering\n",
-    "\t\t\tprint(where_clause)\n",
-    "\t\t\tif eval(eval(where_clause), row):\n",
+    "\t\t\tif eval(where_clause, row):\n",
     "\t\t\t\tselected_rows.append({col: row[col] for col in columns})\n",
     "\t\telse:\n",
     "\t\t\tselected_rows.append({col: row[col] for col in columns})\n",
@@ -298,26 +318,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 149,
    "id": "5c90ad76-3592-4ed7-8c9f-fc67b94648d2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mexecute_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_simple_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmovies_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "Cell \u001b[1;32mIn[114], line 3\u001b[0m, in \u001b[0;36mexecute_select\u001b[1;34m(query, table_data)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecute_select\u001b[39m(query, table_data):\n\u001b[1;32m----> 3\u001b[0m \tcolumns \u001b[38;5;241m=\u001b[39m \u001b[43mquery\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      4\u001b[0m \ttable_name \u001b[38;5;241m=\u001b[39m query[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtable\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      5\u001b[0m \twhere_clause \u001b[38;5;241m=\u001b[39m query[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhere\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result: \n",
+      " [{'movieId': '12', 'title': 'Dracula: Dead and Loving It (1995)', 'genres': 'Comedy|Horror'}]\n"
      ]
     }
    ],
    "source": [
     "result = execute_select(a_simple_query, movies_data)\n",
-    "print(result)"
+    "print('result: \\n', result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "bee0f8c9-c482-4b15-83de-62f70dd39d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result: \n",
+      " [{'movieId': '1', 'title': 'Toy Story (1995)', 'genres': 'Adventure|Animation|Children|Comedy|Fantasy'}, {'movieId': '2', 'title': 'Jumanji (1995)', 'genres': 'Adventure|Children|Fantasy'}, {'movieId': '3', 'title': 'Grumpier Old Men (1995)', 'genres': 'Comedy|Romance'}, {'movieId': '4', 'title': 'Waiting to Exhale (1995)', 'genres': 'Comedy|Drama|Romance'}, {'movieId': '5', 'title': 'Father of the Bride Part II (1995)', 'genres': 'Comedy'}, {'movieId': '6', 'title': 'Heat (1995)', 'genres': 'Action|Crime|Thriller'}, {'movieId': '7', 'title': 'Sabrina (1995)', 'genres': 'Comedy|Romance'}, {'movieId': '8', 'title': 'Tom and Huck (1995)', 'genres': 'Adventure|Children'}, {'movieId': '9', 'title': 'Sudden Death (1995)', 'genres': 'Action'}, {'movieId': '10', 'title': 'GoldenEye (1995)', 'genres': 'Action|Adventure|Thriller'}, {'movieId': '11', 'title': 'American President, The (1995)', 'genres': 'Comedy|Drama|Romance'}, {'movieId': '12', 'title': 'Dracula: Dead and Loving It (1995)', 'genres': 'Comedy|Horror'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "another_query = 'int(movieId) <= 12'\n",
+    "result = execute_select(another_query, movies_data)\n",
+    "print('result: \\n', result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a77dde7-b426-4a2b-a247-547b8c572f7b",
+   "metadata": {},
+   "source": [
+    "Wait, was it this simple?   \n",
+    "Yea!"
    ]
   },
   {
@@ -333,7 +379,7 @@
    "id": "f30f9979-d5c1-4fa6-875d-76e2c017ec76",
    "metadata": {},
    "source": [
-    "Semantic Analysis and Query Planning"
+    "Building a more feature rich data engine"
    ]
   }
  ],
