--- a/01.02-A-More-Involved-Example.ipynb
+++ b/01.02-A-More-Involved-Example.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "cbba6f93-2b10-45bf-9975-a41d30ffd219",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4a045b14-f578-47ad-9972-a3f5aaba0911",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0428c276-5ef7-4bde-addf-3bb79337783d",
    "metadata": {},
    "outputs": [],
@@ -133,17 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "4de8e88c-30aa-4ff5-aa64-d563326d35b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import csv\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "id": "e9bc4ebe-94ab-4996-93cf-d1d700091b49",
    "metadata": {},
    "outputs": [],
@@ -160,62 +161,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "2895a682-ea31-4567-b681-b914e6dc4479",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies_data = load_csv(file_path_movies, 'movies')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "df435f24-4999-4dde-89de-65330591cfa1",
+   "execution_count": 6,
+   "id": "92378c45-7838-4531-a605-3c91508efa6c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'movieId': '1',\n",
-       "  'title': 'Toy Story (1995)',\n",
-       "  'genres': 'Adventure|Animation|Children|Comedy|Fantasy'},\n",
-       " {'movieId': '2',\n",
-       "  'title': 'Jumanji (1995)',\n",
-       "  'genres': 'Adventure|Children|Fantasy'},\n",
-       " {'movieId': '3',\n",
-       "  'title': 'Grumpier Old Men (1995)',\n",
-       "  'genres': 'Comedy|Romance'},\n",
-       " {'movieId': '4',\n",
-       "  'title': 'Waiting to Exhale (1995)',\n",
-       "  'genres': 'Comedy|Drama|Romance'},\n",
-       " {'movieId': '5',\n",
-       "  'title': 'Father of the Bride Part II (1995)',\n",
-       "  'genres': 'Comedy'},\n",
-       " {'movieId': '6', 'title': 'Heat (1995)', 'genres': 'Action|Crime|Thriller'},\n",
-       " {'movieId': '7', 'title': 'Sabrina (1995)', 'genres': 'Comedy|Romance'},\n",
-       " {'movieId': '8',\n",
-       "  'title': 'Tom and Huck (1995)',\n",
-       "  'genres': 'Adventure|Children'},\n",
-       " {'movieId': '9', 'title': 'Sudden Death (1995)', 'genres': 'Action'},\n",
-       " {'movieId': '10',\n",
-       "  'title': 'GoldenEye (1995)',\n",
-       "  'genres': 'Action|Adventure|Thriller'},\n",
-       " {'movieId': '11',\n",
-       "  'title': 'American President, The (1995)',\n",
-       "  'genres': 'Comedy|Drama|Romance'},\n",
-       " {'movieId': '12',\n",
-       "  'title': 'Dracula: Dead and Loving It (1995)',\n",
-       "  'genres': 'Comedy|Horror'}]"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group:  movieId, name, genres\n",
+      "group:  movies\n",
+      "group:   WHERE movieId < 10\n",
+      "group:  movieId < 10\n",
+      "('movieId, name, genres', 'movies', ' WHERE movieId < 10', 'movieId < 10')\n"
+     ]
     }
    ],
    "source": [
-    "movies_data['movies'][0:12]"
+    "def parse_select_query(sql: str):\n",
+    "\tmatch = re.match(r\"SELECT (.*) FROM (\\w+)( WHERE (.*))?\", sql, re.IGNORECASE)\n",
+    "\tif not match:\n",
+    "\t\traise ValueError(\"Invalid SQL query\")\n",
+    "\tfor group in match.groups():\n",
+    "\t\tprint ('group: ',group)\n",
+    "\tcolumns, table, _, where = match.groups()\n",
+    "\treturn columns, table, _, where\n",
+    "\n",
+    "query = parse_select_query(\"SELECT movieId, name, genres FROM movies WHERE movieId < 10\")\n",
+    "print(query)"
    ]
   },
   {
@@ -230,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "id": "dd5827cb-d298-410e-b68c-c78e0d2c7181",
    "metadata": {},
    "outputs": [],
@@ -243,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "9f81ca85-717b-4a35-8894-cac73dd6dde0",
    "metadata": {},
    "outputs": [
@@ -253,7 +226,7 @@
        "True"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "id": "c6b30f15-73e1-47a3-a4d5-37ee9b0a0e16",
    "metadata": {},
    "outputs": [],
@@ -293,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "id": "6dea16e1-244f-4a8d-b1dd-0b4c64420bb7",
    "metadata": {},
    "outputs": [],
@@ -318,16 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "id": "5c90ad76-3592-4ed7-8c9f-fc67b94648d2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result: \n",
-      " [{'movieId': '12', 'title': 'Dracula: Dead and Loving It (1995)', 'genres': 'Comedy|Horror'}]\n"
+     "ename": "NameError",
+     "evalue": "name 'movies_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m execute_select(a_simple_query, \u001b[43mmovies_data\u001b[49m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m, result)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movies_data' is not defined"
      ]
     }
    ],
@@ -338,19 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "bee0f8c9-c482-4b15-83de-62f70dd39d47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result: \n",
-      " [{'movieId': '1', 'title': 'Toy Story (1995)', 'genres': 'Adventure|Animation|Children|Comedy|Fantasy'}, {'movieId': '2', 'title': 'Jumanji (1995)', 'genres': 'Adventure|Children|Fantasy'}, {'movieId': '3', 'title': 'Grumpier Old Men (1995)', 'genres': 'Comedy|Romance'}, {'movieId': '4', 'title': 'Waiting to Exhale (1995)', 'genres': 'Comedy|Drama|Romance'}, {'movieId': '5', 'title': 'Father of the Bride Part II (1995)', 'genres': 'Comedy'}, {'movieId': '6', 'title': 'Heat (1995)', 'genres': 'Action|Crime|Thriller'}, {'movieId': '7', 'title': 'Sabrina (1995)', 'genres': 'Comedy|Romance'}, {'movieId': '8', 'title': 'Tom and Huck (1995)', 'genres': 'Adventure|Children'}, {'movieId': '9', 'title': 'Sudden Death (1995)', 'genres': 'Action'}, {'movieId': '10', 'title': 'GoldenEye (1995)', 'genres': 'Action|Adventure|Thriller'}, {'movieId': '11', 'title': 'American President, The (1995)', 'genres': 'Comedy|Drama|Romance'}, {'movieId': '12', 'title': 'Dracula: Dead and Loving It (1995)', 'genres': 'Comedy|Horror'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "another_query = 'int(movieId) <= 12'\n",
     "result = execute_select(another_query, movies_data)\n",
